# CancerSD

./: .gitignore  README.md  pyproject.toml  requirements.txt
Codes/: auxiliary.py  loss.py  main.py  meta_main.py  model.py  utils.py
Codes/data_process/: process_GEO.py  process_TCGA.py
Data/: cpg_to_genes.json
Data/Molecule_selected/: mRNA_selected_original.txt  methylation_selected_original.txt  miRNA_selected_original.txt
Data/STAD/: clinical.tsv  mRNA_max_min.csv  miRNA_max_min.csv  patient_diagnose.csv  patient_lack_mRNA.npy
configs/: base.yaml
configs/data/: stad.yaml
configs/experiments/: stad_diagnosis.yaml
data/molecule_selected/: mRNA_selected.npy  methylation_selected.npy  miRNA_selected.npy
data/processed/STAD/: clinical.tsv  mRNA_max_min.csv  mRNA_to_patient.tsv  methylation_to_patient.tsv  miRNA_max_min.csv  miRNA_to_patient.tsv  patient_diagnose.csv  patient_lack_methylation.npy
scripts/: preprocess_geo.py  preprocess_tcga.py  preprocess_utils.py
src/cancersd/: cli.py  main.py
src/cancersd/data/: auxiliary.py  dataloaders.py
src/cancersd/data/datasets/: base.py  standard.py
src/cancersd/engine/: main.py  meta_main.py  runner.py  trainer.py
src/cancersd/infra/: config.py  logger.py  paths.py
src/cancersd/losses/: loss.py
src/cancersd/models/: cancer_sd_meta.py  model.py
src/cancersd/utils/: common.py  enhancement.py  metrics.py  plotting.py
